--- a/CSS/css_opacity.html
+++ b/CSS/css_opacity.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        /*img{
-            display: none;
-        }*/
-        img {
-            visibility: hidden;
+        img{
+            opacity: 0.5;
+        }
+        img:hover {
+            opacity: 1.0;
         }
     </style>
 </head>
-
 <body>
-    <img src="../HTML/images/ntr.jpg" alt="" width="500px" height="400px">
-    <h2>Display Topic</h2>
+    <h1>Image Opacity</h1>
+    <img src="../HTML/images/ntr.jpg" alt="" width="800px" height="400px">
 </body>
-
 </html>
