--- a/CSS/Assignment oct 19/template Basic 83/aboutus.html
+++ b/CSS/Assignment oct 19/template Basic 83/aboutus.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basic-83</title>
+    <title>About U</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
@@ -58,60 +58,10 @@
         <!-- =================================================== Container =================================================== -->
     
         <div id="container">
-            <!-- ==================== Section 1 ==================== -->
-            <section id="section1">
-                <img src="./images/demo/deadpool cover image.png" alt="deadpool 960x280.">
-            </section>
-
             <!-- ========== Home Page ============== -->
-            <div id="homepage">
-
-                <!-- ========== Section 2 ============== -->
-                <section id="section2">
-                    <article id="article1" class="article_row1">
-                        <figure>
-                            <img src="./images/demo/32x32image1" alt="Ryan Ronalds">
-                        </figure>
-                        <strong>Ryan Ronalds</strong>
-                        <p>Ryan Rodney Reynolds (born October 23, 1976) is a Canadian actor and film producer.</p>
-                        <p class="readmore">
-                            <a href="https://en.wikipedia.org/wiki/Ryan_Reynolds" target="_blank">Read More »</a>
-                        </p>
-                    </article>
-                    <article id="article2" class="article_row1">
-                        <figure>
-                            <img src="./images/demo/32x32image2" alt="Morena Baccarin">
-                        </figure>
-                        <strong>Morena Baccarin</strong>
-                        <p>Morena Silva de Vaz Setta Baccarin ( born June 2, 1979) is a Brazilian actress.</p>
-                        <p class="readmore">
-                            <a href="https://en.wikipedia.org/wiki/Morena_Baccarin"  target="_blank">Read More »</a>
-                        </p>
-                    </article>
-                    <article id="article3" class="article_row1">
-                        <figure>
-                            <img src="./images/demo/32x32image3" alt="32x32">
-                        </figure>
-                        <strong>Ed Skrein</strong>
-                        <p>Edward George Skrein (born 29 March 1983) is an English actor, film director, screenwriter and rapper.</p>
-                        <p class="readmore">
-                            <a href="https://en.wikipedia.org/wiki/Ed_Skrein"  target="_blank">Read More »</a>
-                        </p>
-                    </article>
-                    <article id="article4" class="article_row1 last">
-                        <figure>
-                            <img src="./images/demo/32x32image4" alt="32x32">
-                        </figure>
-                        <strong>Karan Soni</strong>
-                        <p>Karan Soni (born January 8, 1989) is an Indian-American actor. Often appearing in comedic roles.</p>
-                        <p class="readmore">
-                            <a href="https://en.wikipedia.org/wiki/Karan_Soni"  target="_blank">Read More »</a>
-                        </p>
-                    </article>
-                </section>
-
+            <div id="homepage" class="aboutus_page_homepage">
                 <!-- ========== Section 3 ============== -->
-                <section id="section3">
+                <section id="section3" class="aboutus_page">
                     <article id="movieplot">
                         <h2>
                            Movie Plot
@@ -123,17 +73,6 @@
                             <a href="https://www.imdb.com/title/tt1431045/plotsummary"  target="_blank">Read More »</a>
                         </p>
                     </article>
-                    <aside id="about">
-                        <h2>
-                            About
-                        </h2>
-                        <p>Deadpool is a 2016 American superhero film based on the Marvel Comics character of the same name.</p>
-                        <p>Directed by Tim Miller it stars Ryan Reynolds, Morena Baccarin</p>
-                        
-                        <p class="readmore">
-                            <a href="https://en.wikipedia.org/wiki/Deadpool_(film)"  target="_blank">Read More »</a>
-                        </p>
-                    </aside>
                 </section>
             </div>
         </div>
