--- a/HTML/template6/index.html
+++ b/HTML/template6/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-<title>Basic 87</title>
+<title>template6</title>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="style.css" type="text/css">
 </head>
@@ -9,8 +9,8 @@
 <div class="wrapper row1">
   <header id="header" class="clear">
     <div id="hgroup">
-      <h1><a href="#">Basic 87</a></h1>
-      <h2>Free HTML5 Website Template</h2>
+      <h1><a href="#">template6</a></h1>
+      <h2>natureimages</h2>
     </div>
     <nav>
       <ul>
@@ -100,7 +100,7 @@
 </div>
 <div class="wrapper row3">
   <footer id="footer" class="clear">
-    <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="#">Domain Name</a></p>
+    <p class="fl_left">Copyright &copy; 2021 - All Rights Reserved - <a href="#">Domain Name</a></p>
     <p class="fl_right">Template by <a target="_blank" href="https://unsplash.com/images/nature" title="Free nature images">nature images</a></p>
   </footer>
 </div>
