vertical bars for all templates

--- a/CSS/Assignment oct 19/template Basic 84/index.html
+++ b/CSS/Assignment oct 19/template Basic 84/index.html
@@ -37,6 +37,23 @@
 
 <!-- =================================================== Container =================================================== -->
     <div class="wrapper row2">
+        <!-- =================================================== Side Nav =================================================== -->
+        <div id="sidenav">
+            <ul class="sidenav_ul">
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="#">About us</a></li>
+                <li><a href="#">ICC</a></li>
+                <li class="dropdown">
+                    <a href="#">Other Players</a>
+                    <ul>
+                        <li><a href="#">Dhoni</a></li>
+                        <li><a href="#">Kohli</a></li>
+                    </ul>
+                </li>
+
+            </ul>
+        </div>
+    <!-- ================================================================================================================= -->
         <div id="container">
             <!-- ==================== Section 1 ==================== -->
             <section id="section1">
