--- a/CSS/Assignment oct 19/template Basic 83/aboutus.html
+++ b/CSS/Assignment oct 19/template Basic 83/aboutus.html
@@ -44,7 +44,7 @@
                     <li><a href="./index.html">Home</a></li>
                     <li><a href="./aboutus.html">About us</a></li>
                     <li><a href="#">Comics</a></li>
-                    <li class="lastoption">
+                    <li class="dropdown">
                         <a href="#">other characters</a>
                         <ul>
                             <li><a href="#">Wolverin</a></li>
