--- a/HTML/practice/basic_templetes/basic65.html
+++ b/HTML/practice/basic_templetes/basic65.html
@@ -109,6 +109,18 @@
         footer span{
             float: right;margin-top:0px ; margin-bottom: 0px;color: grey; text-decoration: none;
         }
+        #img2{
+            opacity: 0.5;
+        }
+        #img2:hover{
+            opacity: 1;
+        }
+        #img1{
+            opacity: 1;
+        }
+        #img1:hover{
+            opacity: 0.7;
+        }
     </style>
 </head>
 <body>
@@ -153,13 +165,13 @@
 </article>
 <article id=art3>
     <summary>
-<img src="https://i.redd.it/02u4lh3bc0251.jpg" alt="skrillex">
+<img id=img1  src="https://i.redd.it/02u4lh3bc0251.jpg" alt="skrillex">
 <figcaption><p>Sonny John Moore</p></figcaption>
 <span>American record producer, DJ, singer and songwriter Skrillex has released one studio album, seven extended plays, 44 singles (including nine as a featured artist), and 23 music videos.(including nine as a featured artist), and 23 music videos.</span>
 <br><a id=aa href="#">Read More>></a>
 </summary>
     <summary style="margin-left: 30px ;">
-        <img src="https://i.redd.it/02u4lh3bc0251.jpg" alt="skrillex">
+        <img id=img2 src="https://i.redd.it/02u4lh3bc0251.jpg" alt="skrillex">
         <figcaption><p>Sonny John Moore</p></figcaption>
         <span>American record producer, DJ, singer and songwriter Skrillex has released one studio album, seven extended plays, 44 singles (including nine as a featured artist), and 23 music videos.(including nine as a featured artist), and 23 music videos.</span>
        <br> <a id=aa href="#">Read More>></a>        
