--- a/HTML/practice/basic_templetes/basic83_templete.html
+++ b/HTML/practice/basic_templetes/basic83_templete.html
@@ -95,7 +95,7 @@ article span{
      <br>
     
      <div style="  margin-left: 15%; width: 960px; margin: 10px auto;background:black; padding-top: 20px; padding-bottom: 20px; clear: both; ">
-         <span style=" background:black; padding: 20px;"><a href="#" style="text-transform: uppercase; color:whitesmoke;text-decoration: none;"> text link</a> </span> 
+         <span style=" background:black; padding: 20px;"><a href="/HTML/basic_templetes/basic87.html" style="text-transform: uppercase; color:whitesmoke;text-decoration: none;"> text link</a> </span> 
          <span style=" background:black; padding: 20px;"><a href="#" style="text-transform: uppercase; color: whitesmoke;text-decoration: none;" > text link</a> </span>
          <span style=" background:black; padding: 20px;"><a href="#" style="text-transform: uppercase; color: whitesmoke;text-decoration: none;" > text link</a> </span>
          <span style=" background:black; padding: 20px; margin-right: 15%;"><a href="#" style="text-transform: uppercase; color: whitesmoke;text-decoration: none;" > text link</a> </span>
