--- a/sprites/1.html
+++ b/sprites/1.html
@@ -32,9 +32,26 @@
         bottom:0;
         right:0;
     }
+    .top-left{
+            background: url("./CSS-Sprites.png");
+            background-position: 10px 10px;
+        }
+        .top-right{
+            background: url("./CSS-Sprites.png");
+            background-position: 10px 10px;
+        }
+        .bottom-left{
+            background: url("./CSS-Sprites.png");
+            background-position:10px 10px ;
+        }
+        .bottom-right{
+            background: url("./CSS-Sprites.png");
+            background-position: 10px 10px;
+        
+        }
 </style>
 <body>
-    <div class="spirites"></div>
+    <div class="spirites top-left"></div>
     <div class="spirites top-right"></div>
     <div class="spirites bottom-left"></div>
     <div class="spirites bottom-right"></div>
