--- a/october21/forms.html
+++ b/october21/forms.html
@@ -1,1 +1,25 @@
-<form i></form>
+<form action="">
+    <label for="username">User Name :</label>
+    <input type="text" id="username" /> <br />
+
+    <label for="password">Enter Password</label>
+    <input type="password" id="password" /> <br>
+
+    <label for="email">Enter Your Mail</label>
+    <input type="email" id="email"  required/> <br>
+
+    <label for="date">Date</label>
+    <input type="date" id="date" /> <br />
+
+    <label for="time">Time</label>
+    <input type="time" id="time" /> <br />
+
+    <label for="search">Search</label>
+    <input type="search" id="search" /> <br />
+
+    
+
+
+    <button>ADD USER</button>
+
+</form>
