--- a/counters_css/counters-increment.html
+++ b/counters_css/counters-increment.html
@@ -29,6 +29,7 @@
         h2{
             color:yellow;
             font-size: 35px;
+            padding-left: 20px;
         }
         </style>
 </head>
