--- a/counters_css/counters-increment.html
+++ b/counters_css/counters-increment.html
@@ -15,7 +15,9 @@
         }
         h2::before{
             counter-increment: subject;
-            content: "subject"counter(subject)":";
+            content: "subject"counter(subject)"   :";
+            color: darkblue;
+            padding-right:20px;
         }
         ::content{
             color: blue;
