--- a/HTML/javascript/functions.html
+++ b/HTML/javascript/functions.html
@@ -12,7 +12,7 @@
 
 <button onclick="touchMe()"> Touch Me</button>
 <button onmouseover="overMe()">click Me</button>
-<button ondo></button>
+<button ondblclick="doubleMe()">Double Click</button>
 <script>
     /*function playGame() {
 
