--- a/javascript/sample2.html
+++ b/javascript/sample2.html
@@ -7,7 +7,30 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <button onclick="clickMe()">clickMe</button><br>
+    <button onmouseover="mouseOver()">mouse</button><br>
+    <button ondblclick="dblclick()">clickMe</button><br>
+    <button onmouseout="mouseout()">mouseout</button>
+
+    <input type="text" name="" id="" onfocus="justFocus()">
+    <script>
+        function justFocus(){
+            console.log(justfocus)
+        }
+        function clickMe(){
+            alert("you selected me")
+        }
+        function mouseOver(){
+            alert("mouse over")
+        }
+        function dblclick(){
+            alert("dblclick")
+        }
+        function mouseout(){
+            console.log("mouseout")
+        }
+
+    </script>
     
 </body>
 </html>
