--- a/javascript/js1_functions/sample2.html
+++ b/javascript/js1_functions/sample2.html
@@ -15,7 +15,7 @@
     <input type="text" name="" id="" onfocus="justFocus()">
     <script>
         function justFocus(){
-            console.log(justfocus)
+            console.log("justfocus")
         }
         function clickMe(){
             alert("you selected me")
