--- a/HTML/sample13_video.html
+++ b/HTML/sample13_video.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        div{
+        div {
             width: 800px;
             margin: auto;
             text-align: center;
@@ -17,12 +17,38 @@
 
 <body>
     <!-- <video src="./videos/mov_bbb.mp4" controls></video> -->
+    <button onclick="playPause()">Play/Pause</button>
+    <button onclick="makeBig()">Big</button>
+    <button onclick="makeSmall()">Small</button>
+    <button onclick="makeNormal()">Normal</button>
     <div>
-        <video controls width="600px" >
+        <video controls id="myvideo">
             <source src="./videos/mov_bbb.mp4" type="video/mp4">
         </video>
     </div>
-    
+    <script>
+        var videoEelement = document.getElementById("myvideo")
+
+        function playPause() {
+
+            if (videoEelement.paused) {
+                videoEelement.play()
+            } else {
+                videoEelement.pause()
+            }
+        }
+        function makeBig() {
+            videoEelement.style.width="900px"
+        }
+        function makeSmall() {
+            videoEelement.style.width="600px"
+        }
+
+        function makeNormal() {
+            videoEelement.style.width=""
+
+        }
+    </script>
 </body>
 
 </html>
