--- a/CSS/background_image.html
+++ b/CSS/background_image.html
@@ -11,7 +11,7 @@
             background-image: url(./back2.jpg), url(./back2.jpg), url(./bg\ \(2\).jpg);
             background-position: right bottom, bottom left, left top;
             background-repeat: no-repeat, no-repeat, repeat;
-            background-blend-mode: multiply;
+            background-blend-mode: multiply,multiply;
             padding: 20px;
         }
 
