--- a/CSS/border_images.html
+++ b/CSS/border_images.html
@@ -9,18 +9,18 @@
         #border_image{
             border: 10px solid transparent;
             padding: 20px;
-            border-image: url(./CSS/boder-image.png) 30 round;
+            border-image: url(./boder-image.png) 30 round;
         }
         #one{
             border: 10px solid transparent;
             padding: 20px;
-            border-image: url(./CSS/bd-im.png) 50 round;
+            border-image: url(./bd-im.png) 15 round;
 
         }
     </style>
 </head>
 <body>
-    <p>Border image</p>
+    <h1>Border image</h1>
     <p id="border_image">Border-Image</p>
     <p id="one">Border</p>
 </body>
