--- a/CSS/counters.html
+++ b/CSS/counters.html
@@ -27,7 +27,9 @@
 
         h1::before {
             counter-increment: section;
-            content: "Section "counter(section)".";
+            content: "Section "counter(section)" .";
+            color: red;
+            padding-right: 20px;
         }
 
         h2::before {
