--- a/HTML/audio.html
+++ b/HTML/audio.html
@@ -1,45 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        li{
-            list-style: none;
-            cursor: pointer;
-            font-weight: bold;
-        }
+       div{
+           width: 600px;
+           margin: 0 auto;
+           background: url(../CSS/back2.jpg);
+           background-position: 40px -50px;
+       }
     </style>
 </head>
+
 <body>
-    <audio controls>
-        <source src="./audio/[iSongs.info] 04 - Madhura Nagarilo.mp3" type="audio/mpeg">
-    </audio>
-
-    <ul id="mySongs">
-        <li>Madhura Nagarilo</li><br>
-        <li>So So Ga</li>
-    </ul>
-
-    <script>
-        var myPlayer = document.getElementById('mySongs')
-        document.getElementById("mySongs").onclick = function (event){
-            myPlayer.setAttribute("src",`./${event.target.innerHTML}.mp3`)
-            if(myPlayer.paused){
-                myPlayer.play()
-         }else{
-                myPlayer.pause()
-            }
-        }
-        function playSongs() {
-            if (myPlayer.paused) {
-                myPlayer.play()
-            } else {
-                myPlayer.pause()
-            }
-        }
-    </script>
+    <button onclick="playPause()">Play/Pause</button>
+    <div>
+        <audio controls id="myAudio">
+            <source src="./audio/[iSongs.info] 04 - Madhura Nagarilo.mp3" type="audio/mp3">
+        </audio>
+    </div>
 </body>
+<script>
+    var audioElement = document.getElementById('myAudio')
+
+    function playPause(){
+        if(audioElement.paused){
+            audioElement.play()
+        }else{
+            audioElement.pause()
+        }
+    }
+</script>
+
 </html>
