--- a/HTML/javascript/functions.html
+++ b/HTML/javascript/functions.html
@@ -18,7 +18,13 @@
 <select name="" id="" onchange="changeEvent()">
  <option value="one">one</option>
  <option value="two">two</option>
- <option value="three">three</option>
+ <option value="three">three</option> <br> <br> <br>
+
+ <div>
+     <video>
+        <source s>
+     </video>
+ </div>
 
 </select>
 <script>
@@ -49,6 +55,8 @@
   function changeEvent(){
     console.log("changed the option..........")
   }
+
+
 </script>
 
 <body>
