--- a/HTML/styleaudio.html
+++ b/HTML/styleaudio.html
@@ -26,8 +26,9 @@
 
         audio {
             border-radius: 20px;
-            width: 500px;
+            width:300px;
             background: color rgb(201, 6, 6);
+            padding-bottom: 0%;
         }
 
         ul {
