--- a/October27 2021/audio.html
+++ b/October27 2021/audio.html
@@ -7,25 +7,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        li{
+        li {
             list-style: none;
             cursor: pointer;
+        }
+        #entire{
+            margin-top: 50px;
+            border: 1px solid black;
+            width: 400px;
+            margin-left: 500px;
+            background: url(./img.jpg) no-repeat ;
+            background-size: 110%;
+            color: blanchedalmond;
+            text-align: center;
         }
     </style>
 </head>
 
 <body>
+    <div id="entire">
 
-    <audio controls id="myAudio">
-        <source src="./Srivalli.mp3" type="audio/mpeg" >
-    </audio>
+        <img src="img2.png" style="height:150px;width:150px">
+        <audio controls id="myAudio" style="margin-left: 40px;">
+            <source src="./Srivalli.mp3" type="audio/mpeg">
+        </audio>
 
-    <ul id="mySongs">
-        <li>Srivalli</li>
-        <li><a link href="./Madhura Nagarilo.mp3" style="text-decoration: none;">Madhura Nagarilo</a></li>
-    </ul>
+        <ul id="mySongs">
+            <li>Srivalli</li>
+            <li>Madhura Nagarilo</li>
+            <li>Chal Chalo</li>
+        </ul>
 
-    <!-- <button onclick="playSongs()">Play/Pause</button> -->
+        <!-- <button onclick="playSongs()">Play/Pause</button> -->
+
+        <script>
+            var myPlayer = document.getElementById("myAudio")
+
+            document.getElementById("mySongs").onclick = function (event) {
+                myPlayer.setAttribute("src", `./${event.target.innerHTML}.mp3`)
+                if (myPlayer.paused) {
+                    myPlayer.play()
+                } else {
+                    myPlayer.pause()
+                }
+            }
+            function playSongs() {
+                if (myPlayer.paused) {
+                    myPlayer.play()
+                } else {
+                    myPlayer.pause()
+                }
+            }
+        </script>
+    </div>
 </body>
 
 </html>
