--- a/HTML/styleaudio.html
+++ b/HTML/styleaudio.html
@@ -10,7 +10,7 @@
         #main {
             background: url(./audio/violin.jfif);
             width: 960px;
-            height: 640px;
+            height: 900px;
             margin: 0 auto;
             background: url(./audio/violin.jfif), url(./audio/violin.jfif);
             background-position: center top;
@@ -26,9 +26,10 @@
         }
 
         audio {
-            border-radius: 200px;
-            width: 100px;
+            border-radius: 600px;
+            width: 300px;
             background: color rgb(201, 6, 6);
+            bottom: 0%;
             
         
         }
