--- a/HTML/RWD/grid.html
+++ b/HTML/RWD/grid.html
@@ -23,8 +23,19 @@
         margin-bottom: 7px;
         padding: 8px;
       }
-      aside {
+      .main{
+        padding:20px;
       }
+      aside {
+        background-color: wheat;
+        padding:20px;
+      }
+      footer{
+          padding:15px;
+          background:tan;
+          clear:both;
+      }
+
       [class*="col-"] {
         float: left;
         padding: 15px;
@@ -159,5 +170,8 @@
         </p>
       </aside>
     </div>
+    <footer>
+        <p>This a footer outside of the float</p>
+    </footer>
   </body>
 </html>
