RWD_media_queries

--- a/HTML/RWD/Template2.html
+++ b/HTML/RWD/Template2.html
@@ -39,7 +39,7 @@
             </nav>
         </header>
     </div>
-    <!-- <div class="wrapper row2">
+    <div class="wrapper row2">
         <div id="container" class="clear">
             <div id="homepage">
                 <section id="latest" class="clear">
@@ -70,7 +70,9 @@
                 </section>
                 <section class="shout">
                     <p>
-                        Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed. Facilispede estibulum nulla orna nisl velit elit ac aliquat non tincidunt. Namjusto cras urna urnaretra lor urna neque sed quis orci nulla laoremut vitae doloreet condimentumst.
+                        Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed.
+                        Facilispede estibulum nulla orna nisl velit elit ac aliquat non tincidunt. Namjusto cras urna
+                        urnaretra lor urna neque sed quis orci nulla laoremut vitae doloreet condimentumst.
                     </p>
                 </section>
             </div>
@@ -85,7 +87,10 @@
                                         <h2>Indonectetus facilis leo nibh</h2>
                                         <p>
                                             This is a W3C compliant free website template from
-                                            <a href="https://www.os-templates.com/" title="Free Website Templates">Os Templates</a>. For full terms of use of this template please read our<a href="https://www.os-templates.com/templates-terms">website template licence</a>.
+                                            <a href="https://www.os-templates.com/" title="Free Website Templates">Os
+                                                Templates</a>. For full terms of use of this template please read our<a
+                                                href="https://www.os-templates.com/templates-terms">website template
+                                                licence</a>.
                                         </p>
                                         <footer class="more">
                                             <a href="#">Read More>></a>
@@ -102,7 +107,10 @@
                                         <h2>Indonectetus facilis leo nibh</h2>
                                         <p>
                                             This is a W3C compliant free website template from
-                                            <a href="https://www.os-templates.com/" title="Free Website Templates">Os Templates</a>. For full terms of use of this template please read our<a href="https://www.os-templates.com/templates-terms">website template licence</a>.
+                                            <a href="https://www.os-templates.com/" title="Free Website Templates">Os
+                                                Templates</a>. For full terms of use of this template please read our<a
+                                                href="https://www.os-templates.com/templates-terms">website template
+                                                licence</a>.
                                         </p>
                                         <footer class="more">
                                             <a href="#">Read More>></a>
@@ -128,7 +136,7 @@
                             <a href="#">Free XHTML Templates</a>
                         </li>
                         <li>
-                            <a href="#">Free Web  Templates</a>
+                            <a href="#">Free Web Templates</a>
                         </li>
                         <li>
                             <a href="#">Free WebSite Layouts</a>
@@ -164,7 +172,7 @@
                 <a href="https://www.os-templates.com/" target="_blank" title="Free Website Templates"> Os Templates</a>
             </p>
         </footer>
-    </div> -->
+    </div>
 </body>
 
 </html>
