--- a/oct 19&20work/basic-88/index.html
+++ b/oct 19&20work/basic-88/index.html
@@ -6,6 +6,21 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="styles/layout.css" type="text/css">
   <!--[if lt IE 9]><script src="scripts/html5shiv.js"></script><![endif]-->
+  <style>
+      #header{
+    width:960px;
+    background-color: #FF9900;
+    margin:0 auto;
+      overflow: auto;
+}
+@media only screen and(max-width:768px){
+    #header{
+        width:100%;
+    } 
+ }  
+
+
+  </style>
 </head>
 
 <body>
@@ -174,3 +189,4 @@
 </body>
 
 </html>
+ 
